syntax = "proto3";


package carrel.common.tag.v2;


/// A common tag for carrel system.
message Tag {
    string key = 1;
    optional string value = 2;
    optional string note = 3;
    string raw_tag_string = 4;
    string uuid = 5;
    repeated string collection_uuids = 6;
    repeated string related_tag_uuids = 7;
    // db id.
    optional int32 id = 8;
    // parent id: usually the uuid of the tag or other entities that this tag is a child of.
    optional string parent_uuid = 9;
}

message TagGroup {

    string key = 1;
    optional string value = 2;
    int32 key_count = 3;
    optional string uuid = 4;
}

message TagKeyValueNote {
    string key = 1;
    optional string value = 2;
    optional string note = 3;
}
